# libstring_util

./: .gitignore  .gitmodules  Jenkinsfile  Makefile  Makefile.am  Makefile.archs  README.md  conanfile.py  configure.ac  libstring_util.pc.in  libstring_util.pt  libstring_util.pt.in  project.properties  rmc-build.yaml  seqm.yaml  supported_archs.mk
.github/workflows/: c-cpp.yml
include/: Makefile.am
include/string_util/: exceptions.h  orderedmap  string_util.h
src/: Makefile.am  exceptions.cpp  os.cpp  os.h  string_util.cpp
test/example/: Makefile.am  check_output.test  example.cpp  expected_output
